<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BillShare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="done">Done</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstchoice"> Take a picture of a Bill</string>
    <string name="secondchoice"> Enter Values Manually</string>
    <string name="or"> Or</string>
    <string name="title_activity_enter_manual_values">EnterManualValues</string>
    <string name="add_amount_text">Add amounts here</string>
    <string name="add_amount_more"><u>Add More amounts &#8230;</u></string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="help_Instruction">1) You can add amount in two ways \n
	    								A) By clicking a picture \n
	    								B) By adding values manually \n 
	    							2) After adding amount you can select no of partners with whom you want to divide the bill. \n
	    							3) After that just add phone numbers to whom you want to notify.</string>
    <string name="button_next">Next</string>
    <string name="button_send_msg">Send Message</string>
    <string name="title_activity_divide_bill">DivideBill</string>
    <string name="Note">Note : Please select the number persons with whom you want to divide this bill</string>
    <string name="Divide_Bill_In">Divide Bill In :</string>
    <string name="checkgallery">Refer Bill</string>

    <string-array name="person_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_notify">Notify</string>
    <string name="notify_users">Notify Users</string>
    <string name="enterNo">Enter Phone Numbers: </string>
    <string name="addPhoneNo"><u>Add Phone No &#8230;</u></string>
    <string name="PhoneHint">Enter No </string>
    <string name="title_activity_text_sent">TextSent</string>
    <string name="messgaeSent">Text Message has been sent!</string>
    <string name="callHome"><u>Click here to create a new bill</u></string>
    <string name="feedback"><u>Feedback</u></string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="enterYourNo">Enter your phone number</string>
    <string name="Message">Message</string>
    <string name="enterMessage">Please enter your Feedback !</string>
    <string name="sendSms">Send SMS</string>
    <string name="home">Home</string>
    <string name="title_activity_thanks">Thanks</string>
    <string name="thanks">Thank you ! \n Your feedback is important to us</string>
	 <string name="button_add">Add more amounts</string>
</resources>