<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:textSize="30sp"
        android:text="@string/messgaeSent" />

	   <TextView
	       android:id="@+id/homepage"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/callHome"
	       android:textSize="30sp" />
	   
	   <Button
	       android:id="@+id/butfeedback"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/feedback" />

</LinearLayout>
