<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="100dp"
        android:paddingTop="50dp"
        android:text="@string/Divide_Bill_In"
        android:textSize="40sp" />

    <Spinner
        android:id="@+id/person_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/butDivideBill"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|right"
        android:text="@string/button_next"
        android:textSize="50sp" />

</LinearLayout>