<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingTop="100dp" >
    </EditText>

    <Button
        android:id="@+id/butOnEnterManual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:textSize="25sp" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="25sp" />
        <Button
        android:id="@+id/phone_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkgallery"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:divider="#000000"
        android:dividerHeight="1dip" >
    </ListView>

</LinearLayout>